<?xml version="1.0" encoding="utf-8" ?>
<!--
    BlackJack Trainer.  BJ strategy tutor.
    Copyright (C) 2012  Daniel Kraft <d@domob.eu>

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item android:id="@+id/strategie_affichage"
      android:icon="@android:drawable/icone"
      android:title="@string/strategie_affichage" />

  <item android:id="@+id/preferences"
      android:icon="@android:drawable/ic_menu_preferences"
      andro<!-- id:title="@string/preferences" />-->

  <item android:id="@+id/reset_trainer"
      android:icon="@android:drawable/ic_menu_delete"
      android:title="@string/reset_trainer" />

  <item android:id="@+id/help"
      android:icon="@android:drawable/ic_menu_help"
      android:title="@string/help" />

  <item android:id="@+id/about"
      android:icon="@android:drawable/ic_menu_info_details"
      android:title="@string/about" />

</menu>
