<?xml version="1.0" encoding="utf-8"?>
<!--
    BlackJack Trainer.  BJ strategy tutor.
    Copyright (C) 2012  Daniel Kraft <d@domob.eu>

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/whole_layout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="@drawable/icon"
    android:gravity="center_horizontal">
    >
  <SurfaceView android:id="@+id/dealer_cards"
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="1" />

  <SurfaceView android:id="@+id/player_cards"
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="1" />

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">

    <TextView android:id="@+id/game_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView android:id="@+id/total_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
  
  </LinearLayout>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">

    <Button android:id="@+id/hit_button"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:text="@string/btnHit" />

    <Button android:id="@+id/stand_button"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:text="@string/btnStand" />

    <Button android:id="@+id/double_button"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:text="@string/btnDouble" />

    <Button android:id="@+id/split_button"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:text="@string/btnSplit" />

  </LinearLayout>

</LinearLayout>
